--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,11 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v2.3.1
         with:
           java-version: '11'
           distribution: 'adopt'
+          cache: 'maven'
 
       - name: Build with maven
         run: ./mvnw -B package --file pom.xml
